# ebpf-guard

./: .codecov.yml  .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  ADOPTERS.md  AUDIT-PERF-2026-06-13.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  ISSUES.md  MAINTAINERS.md  Makefile  README.md  SBOM.md  SECURITY.md  bash.exe.stackdump  codecov.yml  default.pgo  ebpf-guard-professional-dashboard.json  go.mod  go.sum
api/: openapi.yaml  spec.go
bench/: vs_falco_test.go  vs_tetragon_test.go  vs_tracee_test.go
benchmark-harness/: main.go
bpf/: bpf_monitor.bpf.c  cgroup.bpf.c  common.h  dns.bpf.c  fileaccess.bpf.c  gpu_uprobe.bpf.c  hidden_process.bpf.c  http_uprobe.bpf.c  iouring.bpf.c  lsm.bpf.c  network.bpf.c  privesc.bpf.c  syscall.bpf.c  tls_clienthello.bpf.c  tls_uprobe.bpf.c  vmlinux.h  xdp_block.bpf.c
config/: config.yaml
demo/: README.md  docker-compose.yml  setup-vps.sh
docs/: adopters.md  ai-agent-sandbox.md  allowlist-mode.md  benchmark-analysis.md  benchmark-competitor-analysis.md  benchmark-report-2026-07-02.md  canary.md  choosing.md  cli.md  cncf-due-diligence.md  coverage-matrix.md  coverage.md  deployment.md  dns-monitoring.md  drift.md  enforcement.md  explain.md  feedback.md  gossip.md  hardware-profiles.md  integrations.md  lock-ordering.md  lsm-enforcement.md  metrics.md  migration.md  multi-tenant.md  notifications.md  operations.md  performance-tuning.md  (+9 more)
pkg/plugin-sdk/examples/rust/: Cargo.toml  detect_dns_dga.meta.yaml
pkg/plugin-sdk/examples/rust/src/: lib.rs
(+811 files in other folders)
